
2006-05-15  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3364: Changed t3lib_div::validPathStr() that it rejects files starting with ../ or containing /../, but allows ..
	* Corrected comment for maxWInText (tslib_content) and simplified calculation

2006-05-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixes and features to htmlArea RTE extension (see details in local ChangeLog)

2006-04-29  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix typolink.addQueryString.method=GET (see bug #3241)
	* Fix problem with 2-byte charsets (eg UTF-16) in t3lib_cs::utf8_encode().

2006-05-03   Rupert Germann  <rupi@gmx.li>

	* Fix: mod.web_list.alternateBgColors=1 did not work in TYPO3 4.0 when no skin is used. Added the missing class to typo3/stylesheet.css

2006-04-30  Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug #3226: Error in template::clearCacheMenu if user is not admin

2006-04-29  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed wrong use of implode in typo3/mod/tools/em/class.em_index.php (lines 1392, 1424)

2006-04-23  Dmitry Dulepov <typo3@accio.lv>

	* Fixed bugs #3049 and #3176: HTTP status 503 is sent when $TSFE->set_no_cache is called

2006-04-21  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue #3172: further correction to MIME type determination.

2006-04-20  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Don't do false SQL query when SYS[setDBinit] is empty. Log error on failure.

2006-04-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added "Lucida Console" (Windows core font) as default font for monospaced BE form fields

2006-04-18  Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug #3196: PHP warnings in class.t3lib_tceforms.php

2006-04-14   Rupert Germann  <rupi@gmx.li>

	* fix for the fix from bug #2868: the adminpanel didn't transfer the page id correctly when realUrl was used

2006-04-14  Bernhard Kraft  <kraftb@kraftb.at>
